# Wan2GP

./: .gitignore  pyproject.toml
