[project]
name = "wan2gp"
version = "0.1.0"
description = ""
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.4.0",
    "dashscope>=1.22.1",
    "diffusers>=0.32.2",
    "easydict>=1.13",
    "einops>=0.8.1",
    "flash-attn==2.7.2.post1",
    "ftfy>=6.3.1",
    "gradio>=5.20.0",
    "imageio>=2.37.0",
    "imageio-ffmpeg>=0.6.0",
    "mmgp==3.2.1",
    "moviepy==1.0.3",
    "numpy>=1.23.5,<2",
    "opencv-python>=4.11.0.86",
    "sageattention==1.0.6",
    "setuptools>=75.8.2",
    "tokenizers>=0.21.0",
    "torch==2.6.0",
    "torchaudio>=2.6.0",
    "torchvision>=0.21.0",
    "tqdm>=4.67.1",
    "transformers>=4.49.0",
]
